update index.html to fix one card text position

--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
                 height="260"
                 alt="Mark Guerrero"
               />
-              <div class="team-info">
+              <div class="team-info-block">
                 <h3 class="team-member">Mark Guerrero</h3>
                 <p class="team-work">Product Designer</p>
               </div>
