--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
         </div>
       </section>
       <section class="section-features">
-        <div class="container features-block">
+        <div class="container">
           <h2 class="visually-hidden" id="studio">Our Features</h2>
           <ul class="features-list">
             <li class="features-item">
@@ -99,7 +99,7 @@
         </div>
       </section>
       <section class="section-team">
-        <div class="container ourteam-container">
+        <div class="container">
           <h2 class="header-team" id="ourteam">Our Team</h2>
           <ul class="team-list">
             <li class="team-item">
@@ -154,7 +154,7 @@
         </div>
       </section>
       <section class="section-port">
-        <div class="container portfolio-container">
+        <div class="container">
           <h2 class="header-port" id="portfolio">Our Portfolio</h2>
           <ul class="port-list">
             <li class="port-item">
@@ -235,15 +235,13 @@
     </main>
     <footer class="page-footer">
       <div class="container">
-        <div class="footer-container">
-          <a class="logo footer-logo" href="./index.html"
-            >Web<span class="logo-part">Studio</span></a
-          >
-          <p class="footer-text">
-            Increase the flow of customers and sales for your business with
-            digital marketing & growth solutions.
-          </p>
-        </div>
+        <a class="logo footer-logo" href="./index.html"
+          >Web<span class="logo-part">Studio</span></a
+        >
+        <p class="footer-text">
+          Increase the flow of customers and sales for your business with
+          digital marketing & growth solutions.
+        </p>
       </div>
     </footer>
   </body>
